--- a/extensions.conf
+++ b/extensions.conf
@@ -13,45 +13,46 @@ include => default
 [default]
 include => phones
 include => voicemail
+include => ringall
 include => conf-rooms
 
 [voicemail]
 exten => _999,1,Answer()
-exten => _999,n,VoiceMailMain(@no-password,s)
-exten => _999,n,Hangup()
+;exten => _999,n,VoiceMailMain(@pass-no,s)
+exten => _999,n,VoiceMailMain(${CALLERID(num)}@pass-no,s)
 
 exten => _998,1,Answer()
-exten => _998,n,VoiceMailMain(@with-password)
-exten => _998,n,Hangup()
+exten => _998,n,VoiceMailMain(@pass-yes)
 
-[phones]
-exten => 1001,1,Answer()
-exten => 1001,n,Wait(1)
-exten => 1001,n,Dial(SIP/${EXTEN},5)
-exten => 1001,n,Voicemail(${EXTEN},u)
-exten => 1001,n,Hangup()
-
-exten => _110[1-5],1,Answer()
-exten => _110[1-5],n,Dial(SIP/${EXTEN},5) 
-exten => _110[1-5],n,Voicemail(${EXTEN},u)
-exten => _110[1-5],n,Hangup()
-
-exten => _120[1-5],1,Answer()
-exten => _120[1-5],n,Dial(SIP/${EXTEN},5)
-exten => _120[1-5],n,Voicemail(${EXTEN},u)
-exten => _120[1-5],n,Hangup()
-
-exten => _130[1-5],1,Answer()
-exten => _130[1-5],n,Dial(SIP/${EXTEN},5)
-exten => _130[1-5],n,Voicemail(${EXTEN},u)
-exten => _130[1-5],n,Hangup()
-
-exten => _140[1-5],1,Answer()
-exten => _140[1-5],n,Dial(SIP/$(EXTEN),5)
-exten => _140[1-5],n,Voicemail(${EXTEN},u)
-exten => _140[1-5],n,Hangup()
+[ringall]
+exten => 1000,1,Dial(SIP/1001,15)
 
 [conf-rooms]
 exten => 888,1,MeetMe(1)
 exten => 889,1,MeetMe(2)
 
+[phones]
+exten => 1001,1,Answer()
+exten => 1001,n,Dial(SIP/${EXTEN},10)
+exten => 1001,n,Voicemail(${EXTEN}@pass-yes)
+exten => 1001,n,Hangup()
+
+exten => _110[1-5],1,Answer()
+exten => _110[1-5],n,Dial(SIP/${EXTEN},10) 
+exten => _110[1-5],n,Voicemail(${EXTEN}@pass-no)
+exten => _110[1-5],n,Hangup()
+
+exten => _120[1-5],1,Answer()
+exten => _120[1-5],n,Dial(SIP/${EXTEN},10)
+exten => _120[1-5],n,Voicemail(${EXTEN}@pass-no)
+exten => _120[1-5],n,Hangup()
+
+exten => _130[1-5],1,Answer()
+exten => _130[1-5],n,Dial(SIP/${EXTEN},10)
+exten => _130[1-5],n,Voicemail(${EXTEN}@pass-yes)
+exten => _130[1-5],n,Hangup()
+
+exten => _140[1-5],1,Answer()
+exten => _140[1-5],n,Dial(SIP/$(EXTEN),10)
+exten => _140[1-5],n,Voicemail(${EXTEN}@pass-yes)
+exten => _140[1-5],n,Hangup()
