--- a/voicemail.conf
+++ b/voicemail.conf
@@ -14,30 +14,30 @@ central24=America/Chicago|'vm-received' q 'digits/at' H N 'hours'
 military=Zulu|'vm-received' q 'digits/at' H N 'hours' 'phonetic/z_p'
 european=Europe/Copenhagen|'vm-received' a d b 'digits/at' HM
 
-[no-password]
-1101 => ,user1101,aa@bb.cc
-1102 => ,user1102,aa@bb.cc
-1103 => ,user1103,aa@bb.cc
-1104 => ,user1104,aa@bb.cc
-1105 => ,user1105,aa@bb.cc
+[pass-no]
+1101 => ,user1101
+1102 => ,user1102
+1103 => ,user1103
+1104 => ,user1104
+1105 => ,user1105
 
-1201 => ,user1201,aa@bb.cc
-1202 => ,user1202,aa@bb.cc
-1203 => ,user1203,aa@bb.cc
-1204 => ,user1204,aa@bb.cc
-1205 => ,user1205,aa@bb.cc
+1201 => ,user1201
+1202 => ,user1202
+1203 => ,user1203
+1204 => ,user1204
+1205 => ,user1205
 
-[with-password]
-1001 => 1001,user1001,aa@bb.cc
+[pass-yes]
+1001 => 1001,user1001
 
-1301 => 1301,user1301,aa@bb.cc
-1302 => 1302,user1302,aa@bb.cc
-1303 => 1303,user1303,aa@bb.cc
-1304 => 1304,user1304,aa@bb.cc
-1305 => 1305,user1305,aa@bb.cc
+1301 => 1301,user1301
+1302 => 1302,user1302
+1303 => 1303,user1303
+1304 => 1304,user1304
+1305 => 1305,user1305
 
-1401 => 1401,user1401,aa@bb.cc
-1402 => 1402,user1402,aa@bb.cc
-1403 => 1403,user1403,aa@bb.cc
-1404 => 1404,user1404,aa@bb.cc
-1405 => 1405,user1405,aa@bb.cc
+1401 => 1401,user1401
+1402 => 1402,user1402
+1403 => 1403,user1403
+1404 => 1404,user1404
+1405 => 1405,user1405
