fixes + start config forward to group if absent

--- a/extensions.conf
+++ b/extensions.conf
@@ -13,23 +13,40 @@ include => default
 [default]
 include => phones
 include => voicemail
-include => ringall
 include => conf-rooms
+include => ringall
 
 [voicemail]
 exten => _999,1,Answer()
-;exten => _999,n,VoiceMailMain(@pass-no,s)
 exten => _999,n,VoiceMailMain(${CALLERID(num)}@pass-no,s)
 
 exten => _998,1,Answer()
 exten => _998,n,VoiceMailMain(@pass-yes)
 
-[ringall]
-exten => 1000,1,Dial(SIP/1001,15)
-
 [conf-rooms]
 exten => 888,1,MeetMe(1)
 exten => 889,1,MeetMe(2)
+
+[ringall]
+exten => 1000,1,Answer()
+exten => 1000,n,Dial(SIP/1001,15)
+exten => 1000,n,Hangup()
+
+exten => 1100,1,Answer()
+exten => 1100,n,Dial(SIP/1101&SIP/1102&SIP/1103&SIP/1104&SIP/1105,15)
+exten => 1100,n,Hangup()
+
+exten => 1200,1,Answer()
+exten => 1200,n,Dial(SIP/1201&SIP/1202&SIP/1203&SIP/1204&SIP/1205,15)
+exten => 1200,n,Hangup()
+
+exten => 1300,1,Answer()
+exten => 1300,n,Dial(SIP/1301&SIP/1302&SIP/1303&SIP/1304&SIP/1305,15)
+exten => 1300,n,Hangup()
+
+exten => 1400,1,Answer()
+exten => 1400,n,Dial(SIP/1401&SIP/1402&SIP/1403&SIP/1404&SIP/1405,15)
+exten => 1400,n,Hangup()
 
 [phones]
 exten => 1001,1,Answer()
@@ -49,6 +66,7 @@ exten => _120[1-5],n,Hangup()
 
 exten => _130[1-5],1,Answer()
 exten => _130[1-5],n,Dial(SIP/${EXTEN},10)
+exten => _130[1-5],n,Dial(SIP/1100,10)
 exten => _130[1-5],n,Voicemail(${EXTEN}@pass-yes)
 exten => _130[1-5],n,Hangup()
 
@@ -56,3 +74,4 @@ exten => _140[1-5],1,Answer()
 exten => _140[1-5],n,Dial(SIP/$(EXTEN),10)
 exten => _140[1-5],n,Voicemail(${EXTEN}@pass-yes)
 exten => _140[1-5],n,Hangup()
+
