last commit, dynamic confernces

--- a/extensions.conf
+++ b/extensions.conf
@@ -25,7 +25,8 @@ exten => _998,n,VoiceMailMain(@pass-yes)
 
 [conf-rooms]
 exten => 888,1,MeetMe(1)
-exten => 889,1,MeetMe(2)
+
+exten => 889,1,MeetMe(,dp)
 
 [ringall]
 exten => 1000,1,Answer()
