--- a/extensions.conf
+++ b/extensions.conf
@@ -73,6 +73,7 @@ exten => _130[1-5],n,Hangup()
 
 exten => _140[1-5],1,Answer()
 exten => _140[1-5],n,Dial(SIP/$(EXTEN),10)
+exten => _140[1-5],n,Dial(SIP/1200,10)
 exten => _140[1-5],n,Voicemail(${EXTEN}@pass-yes)
 exten => _140[1-5],n,Hangup()
 
